@@ -1,5 +1,9 @@
 Change Log
 
+20201001 SCL
+- move MV_FOR_xx from EnergyMeter.h to openevse.h, and outside of KWH_RECORDING
+	to fix compile error when KWH_RECORDING not defined
+
 20200816 SCL V7.0.2
 - get rid of LoadThresholds()/g_DefaultThreshData to save space
   -> fixes a bug that crept in to DoPost() when I changed hardcoded value to 
